Added Safari/iOS compatibility: -webkit prefixes for user-select and backdrop-filter

--- a/assets/css/admin-panel-enhanced.css
+++ b/assets/css/admin-panel-enhanced.css
@@ -676,6 +676,9 @@
 
 .request-header {
     cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
     display: flex;
     align-items: center;
